# AgroEcoMetrics

./: .buildinfo  .gitignore  Lisence  README.md  Update_Instructions.txt  agro-eco-metrics.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirments.txt  search.html  setup.py
.doctrees/: agro-eco-metrics.doctree  environment.pickle  index.doctree
AgroEcoMetrics.egg-info/: PKG-INFO  SOURCES.txt
AgroEcoMetrics/BioSciEquations/: Runoff.py
Tests/: Pypi_Install_Test  Pypi_Install_Test.py  basic_tests.py
Tests/Data/: Arlington_Daily_Data.csv  Marshfield_All_Data.csv  Saved_Test_Data.cSv
agroecometrics/: __init__.py  bio_sci_equat.py  bio_sci_equations.py  settings.py  visual.py
agroecometrics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agroecometrics/bio_sci_equations/: AirTemp.py  EvapoTranspiration  GrowingDegreeDays  GrowingDegreeDays.py  Observation.py  Runoff.py  SoilTemp.py  __init__.py  _util.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: modules.doctree
docs/_modules/: index.html
docs/_modules/agroecometrics/: bio_sci_equations.html  data.html  equations.html  settings.html  visualizations.html
docs/_sources/: index.rst.txt  modules.rst.txt
docs/_static/: documentation_options.js
docs/source/: agro-eco-metrics.rst  conf.py  index.rst
source/: conf.py  modules.rst
src/agroecometrics/: __init__.py  bio_sci_equations.py  data.py  equations.py  settings.py  visualizations.py
tests/: 5_Min_Data.csv  Daily_Data.csv  tests.py
tests/expected/air_temp/: air_temp_model.npy
tests/expected/daily_soil_temp/: daily_soil_depths_1.npy  daily_soil_depths_4.npy  daily_soil_depths_8.npy  daily_soil_temp_1.npy  daily_soil_temp_2.npy  daily_soil_temp_3.npy  daily_soil_temp_4.npy  daily_soil_temp_5.npy  daily_soil_temp_6.npy  daily_soil_temp_7.npy  daily_soil_temp_8.npy  daily_soil_temp_9.npy
tests/expected/evapotranspiration/: dalton.npy  hargreaves.npy  jensen_haise.npy  penman.npy  penman_monteith.npy  romananko.npy
tests/expected/model_3d_soil_temp/: depth_3.npy  pred_time_3.npy  temp_3.npy
tests/expected/model_gdd/: daily_gdd_1.npy  daily_gdd_2.npy  daily_gdd_4.npy  daily_gdd_5.npy  daily_gdd_6.npy  daily_gdd_7.npy  daily_gdd_sum_1.npy  (+18 more)
workflows/: agroecometrics.toml
(+50 files in other folders)
