[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agroecometrics"
version = "0.0.3b1"
description = "Agricultural ecology metrics and visualization tools."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"  
authors = [
  {name = "Scarlett Olson", email = "scarlett.olson@example.com"},
]

dependencies = [
  "matplotlib",
  "pandas",
  "numpy",
  "bokeh"
]

[project.urls]
"Homepage" = "https://github.com/YourUsername/agro-eco-metrics"
"Bug Tracker" = "https://github.com/YourUsername/agro-eco-metrics/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


