[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agroecometrics"
version = "0.1.0a"
description = "Agricultural ecology metrics and visualization tools."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"  
authors = [
  {name = "Scarlett Olson", email = "Scarlett.W.Olson@gmail.com"},
]

dependencies = [
  "matplotlib",
  "pandas",
  "numpy",
  "bokeh",
  "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/wiscbicklab/agro-eco-metrics"
"Bug Tracker" = "https://github.com/wiscbicklab/agro-eco-metrics/issues"
"Documentation" = "https://wiscbicklab.github.io/AgroEcoMetrics"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


